--- a/CR221376_GUIA4/Desarrollo/mediaqueries.html
+++ b/CR221376_GUIA4/Desarrollo/mediaqueries.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Ejemplo de Media Queries</title>
+    <link rel="stylesheet" href="../assets/css/mediaqueries.css">
 </head>
 
 <body>
