--- a/CR221376_GUIA4/Analisis de Resultado/concesionaria.html
+++ b/CR221376_GUIA4/Analisis de Resultado/concesionaria.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
     <title>Concesionaria de Automóviles | Blue Eagle Company</title>
 </head>
+
 <body>
     <header>
         <h1>Concesionaria de Automóviles</h1>
     </header>
-    <section id="superior">
-        <div id="encabezado">
-            <nav>
-                <ul>
-                    <li><a href="index.html" id="inicio">Inicio</a></li>
-                    <li><a href="planes.html" id="planes">Planes</a></li>
-                    <li><a href="galeria.html" id="galeria">Galeria</a></li>
-                </ul>
-            </nav>
+    <nav>
+        <a href="concesionaria.html">Inicio</a>
+        <a href="toyota.html">Toyota</a>
+        <a href="hino.html">Hino</a>
+        <a href="chevrolet.html">chevrolet</a>
+        <a href="mitsubishi.html">mitsubishi</a>
+        <a href="fuso.html">Fuso</a>
+        <a href="kia.html">Kia</a>
+        <a href="BMW.html">BMW</a>
+    </nav>
     <main>
-        <section class="vehiculo">
-            <img src="../assets/img/concesionaria/toyota/rush.png" alt="Automóvil 1">
-            <h2>RUSH</h2>
-            <a href="rush.html">Ver mas detalles</a>
+        <section id="marcas">
+            <a href="toyota.html" id="inicio"><img id="marca" src="../assets/img/concesionaria/concesionaria/toyota.png"
+                    alt="Marca 1"></a>
+            <a href="hino.html" id="inicio"> <img id="marca" src="../assets/img/concesionaria/concesionaria/hino.png"
+                    alt="Marca 2"></a>
+            <a href="chevrolet.html" id="inicio"><img id="marca"
+                    src="../assets/img/concesionaria/concesionaria/chevrolet.png" alt="Marca 3"></a>
+            <a href="mitsubishi.html" id="inicio"><img id="marca"
+                    src="../assets/img/concesionaria/concesionaria/mitsubishi.png" alt="Marca 4"></a>
+            <a href="fuso.html" id="inicio"><img id="marca"
+                    src="../assets/img/concesionaria/concesionaria/NEW_FUSO_2022.png" alt="Marca 5"></a>
+            <a href="kia.html" id="inicio"><img id="marca" src="../assets/img/concesionaria/concesionaria/kia500.jpg"
+                    alt="Marca 6"></a>
+            <a href="BMW.html" id="inicio"><img id="marca" src="../assets/img/concesionaria/concesionaria/image9.png"
+                    alt="Marca 7"></a>
         </section>
-        <section class="vehiculo">
-            <img src="../assets/img/concesionaria/toyota/rav4.png" alt="Automóvil 2">
-            <h2>rav4</h2>
-            <a href="RAV4.html">Ver mas detalles</a>
-        </section>
-        <section class="vehiculo">
-            <img src="../assets/img/concesionaria/toyota/336x224.jpg" alt="Automóvil 3">
-            <h2>4RUNNER LIMITED</h2>
-            <a href="4RUNNER_LIMITED.html">Ver mas detalles</a>
-        </section>
+
         <!-- Agregar más vehículos según sea necesario -->
     </main>
     <footer>
@@ -42,4 +47,5 @@
         <img src="../assets/img/mark 11 lic.png" alt="" width="120px">
     </footer>
 </body>
+
 </html>
