--- a/CR221376_GUIA4/Analisis de Resultado/rush.html
+++ b/CR221376_GUIA4/Analisis de Resultado/rush.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toyota Rush 1.5 L - Toyota El Salvador</title>
     <link rel="stylesheet" href="../assets/css/styleToyotaAutos.css">
+    <script src="script.js"></script>
 </head>
+
 <body>
     <header>
-        <h1>Centroamérica</h1>
-        <p>Explorando la belleza y diversidad de la región</p>
+
     </header>
-    <section >
+    <section>
         <nav id="concesionaria">
-            <a href="concesionaria.html">Inicio</a>
-            <a href="toyota.html">Toyota</a>
-            <a href="hino.html">Hino</a>
-            <a href="chevrolet.html">chevrolet</a>
-            <a href="mitsubishi.html">mitsubishi</a>
-            <a href="fuso.html">Fuso</a>
-            <a href="kia.html">Kia</a>
-            <a href="BMW.html">BMW</a>
+            <a id="concesionaria" href="concesionaria.html">Inicio</a>
+            <a id="concesionaria" href="toyota.html">Toyota</a>
+            <a id="concesionaria" href="hino.html">Hino</a>
+            <a id="concesionaria" href="chevrolet.html">chevrolet</a>
+            <a id="concesionaria" href="mitsubishi.html">mitsubishi</a>
+            <a id="concesionaria" href="fuso.html">Fuso</a>
+            <a id="concesionaria" href="kia.html">Kia</a>
+            <a id="concesionaria" href="BMW.html">BMW</a>
         </nav>
     </section>
     <nav>
@@ -29,34 +31,111 @@
         <a href="#especificaciones">Especificaciones</a>
     </nav>
     <div class="container">
-        <section id="inicio">
-            <h2>Bienvenido a nuestra página sobre Centroamérica</h2>
-            <p>Descubre todo lo que esta hermosa región tiene para ofrecer.</p>
-        </section>
-        <section id="historia">
-            <h2>Historia de Centroamérica</h2>
-            <p>Aquí puedes aprender sobre la rica historia de Centroamérica y sus civilizaciones ancestrales.</p>
-        </section>
-        <section id="cultura">
-            <h2>Cultura Centroamericana</h2>
-            <p>Sumérgete en la cultura vibrante y diversa de Centroamérica, desde tradiciones hasta gastronomía.</p>
-        </section>
-        <section id="geografia">
-            <h2>Geografía de Centroamérica</h2>
-            <p>Explora la geografía única de la región, con sus montañas, playas y rica biodiversidad.</p>
-        </section>
-        <section id="turismo">
-            <h2>Turismo en Centroamérica</h2>
-            <p>Descubre los destinos turísticos más populares y emocionantes de Centroamérica.</p>
-        </section>
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <p>Si tienes preguntas o comentarios, no dudes en ponerte en contacto con nosotros.</p>
-        </section>
+        <section id="informacion">
+            <img src="../assets/img/concesionaria/toyota/Main-Banner-Rush-Emotional_v002.jpg" alt="">
+            <h2>Rush</h2>
+            <h4>Grande como tus sueños</h4>
+            <h5> Desde $29,600
+                *Precios incluyen IVA, IPM y gastos de placas.</h5>
+            <nav id="colores">
+                <a id="colores" href="#colores">Colores</a>
+                <a id="colores" href="#version">Version</a>
+            </nav>
+            <section id="contenido">
+                <section id="colores">
+                    <div class="plan">
+                        <img src="../assets/img/concesionaria/toyota/rush/RUSH1712-3022.png" alt="Plan naturaleza"
+                            width="260" height="150">
+                    </div>
+                    <div class="plan">
+                        <img src="../assets/img/concesionaria/toyota/rush/RUSH1712-3023.png" alt="Plan naturaleza"
+                            width="260" height="150">
+                    </div>
+                    <div class="plan">
+                        <img src="../assets/img/concesionaria/toyota/rush/RUSH1712-3024.png" alt="Plan naturaleza"
+                            width="260" height="150">
+                    </div>
+                    <div class="plan">
+                        <img src="../assets/img/concesionaria/toyota/rush/RUSH1712-3025.png" alt="Plan naturaleza"
+                            width="260" height="150">
+                    </div>
+                    <div class="plan">
+                        <img src="../assets/img/concesionaria/toyota/rush/RUSH1712-3026.png" alt="Plan naturaleza"
+                            width="260" height="150">
+                    </div>
+                </section>
+            </section>
+            <section id="version">
+                <h2>Especificaciones</h2>
+                <hr>
+                <h3>RUSH 4X2 AUT SPORT</h3>
+                <br>• Encendido automático de luces
+                <br>• Rines bi-tono de aluminio de 17”
+                <br>• Tracción 4x2 trasera
+                <br>• Sistema de inyección Electrónica, Dual VVT-i
+            </section>
+            <section id="caracteristicas">
+                <h2>Diseño</h2>
+                <h4>Clase y versatilidad </h4>
+                <h3>Exterior</h3>
+                <p>Rush cuenta con un elegante exterior con refinados acabados. Además, su diseño fluido en la rejilla
+                    central que se extiende desde el emblema hasta sus faros frontales, le dan a Rush una imagen de
+                    mayor amplitud. Conducir en busca de nuevas aventuras será ahora más divertido ya que Rush está
+                    equipada con faros delanteros, faros antiniebla, luces LED que no solo le dan un look deportivo sino
+                    también de la seguridad que necesitas en el camino.
+
+                    Sus líneas sofisticadas de los laterales y la superficie tridimensional le otorgan dinamismo y
+                    elegancia. Las manijas exteriores son del mismo color de la carrocería. Además su sistema Smart
+                    Entry permite el acceso al vehículo sin las llaves en mano.</p>
+                <p>Los espejos de ajuste eléctrico de Rush son del mismo color de la carrocería y con luces
+                    direccionales LED. Las luces LED no sólo ayudan a la estética del vehículo, sino que también son
+                    elementos de seguridad. Los rieles de techo integrados dan una imagen de mayor dinamismo y se
+                    acoplan para llevar cargas que no quepan en el interior.
+
+                    Su spoiler trasero le dan el toque deportivo y aerodinámico para el mejor aprovechamiento de
+                    combustible. Los faros posteriores LED con líneas horizontales delgadas acentúan su estilo
+                    deportivo y elegante.</p>
+                <h3>Interior</h3>
+                <p>Con tres filas de asientos y capacidad para 7 personas, Rush cuenta con detalles cromados y de alto
+                    contraste en su diseño interior que le brindan al espacio en cabina de mayor frescura y
+                    sofisticación. Su consola central cuenta con los instrumentos tecnológicos de calidad premium para
+                    ofrecerte una experiencia de conducción única y toma de corriente para cada uno de sus asientos.
+                    Adicionalmente, su sistema de ventilación delantero y trasero te harán disfrutar cada viaje sin
+                    molestias.
+
+                    El amplio portaequipajes puede contener hasta 20 litros incluso con todos los asientos ocupados.</p>
+                <h3>Desempeño</h3>
+                <h5>Confiabilidad y desempeño asegurado</h5>
+                <p>Rush te ofrece tracción posterior y excelente relación peso-potencia para marcha más estable y
+                    potente. Tanto en su versión mecánica como automática, el motor de Rush está diseñado para alcanzar
+                    altas velocidades con el mejor aprovechamiento de combustible y el menor número de revoluciones.
+
+                    Además de la tecnología del motor Dual VVT-i permite el trabajo continuo de admisión y escape de
+                    combustible de acuerdo a las condiciones de manejo, lo que permite optimizar y ahorrar la mayor
+                    cantidad de combustible.</p>
+            </section>
+            <section id="especificaciones">
+                <h2>Especificaciones</h2>
+                <h3>Capacidad</h3>
+                <h5>7 personas</h5>
+               <h3>Tanque de Combustible</h3>
+               <h5>Capacidada de 11.88 Galones</h5>
+               <h3>Motor</h3>
+               <h5>4 cilindros de 1.5 litros cada uno 
+                <br> 103 caballos de fuerza</h5>
+               <h3>Sistema de Frenos</h3>
+               <h5>Control ABS con EBD <br> delanteros De disco ventilados <br> trazeros Tambor</h5>
+               <h3>Exterior</h3>
+               <h5>llantas 215/60R17215/65R16</h5>
+               <h3>Interior</h3>
+               <h5>Aire acondicionado	Automático</h5>
+              
+            </section>
     </div>
     <footer>
         <p>&copy; 2023 Propiedad de Aguila Azul. </p>
         <img src="assets/img/mark 11 lic.png" alt="" width="120px">
     </footer>
 </body>
+
 </html>
