--- a/CR221376_GUIA4/Analisis de Resultado/4RUNNER_LIMITED.html
+++ b/CR221376_GUIA4/Analisis de Resultado/4RUNNER_LIMITED.html
@@ -31,10 +31,10 @@
     </nav>
     <div class="container">
         <section id="informacion">
-            <img src="../assets/img/concesionaria/toyota/RAV4_1440x421_03.jpg" alt="">
-            <h2>Toyota RAV4</h2>
-            <h4>Ahora tu mundo se ha vuelto más grande</h4>
-            <h5> Desde $43,100
+            <img src="../assets/img/concesionaria/toyota/banner-4runner-1.png" alt="">
+            <h2>4RunnerLimited</h2>
+            <h4>Cuando tus aventuras necesitan más</h4>
+            <h5> Desde $73,800
                 *Precios incluyen IVA, IPM y gastos de placas.</h5>
             <nav id="colores">
                 <a id="colores" href="#colores">Colores</a>
@@ -43,35 +43,31 @@
             <section id="contenido">
                 <section id="colores">
                     <div class="plan">
-                        <img src="../assets/img/concesionaria/toyota/rav4/rav4_azul_marzo_2019_v03.png"
+                        <img src="../assets/img/concesionaria/toyota/4RunnerLimited/4runner-black.jpg"
                             alt="Plan naturaleza" width="260" height="150">
                     </div>
                     <div class="plan">
-                        <img src="../assets/img/concesionaria/toyota/rav4/rav4_blanco-perla_marzo_2019_v03.png"
+                        <img src="../assets/img/concesionaria/toyota/4RunnerLimited/4runner-blanca.jpg"
                             alt="Plan naturaleza" width="260" height="150">
                     </div>
                     <div class="plan">
-                        <img src="../assets/img/concesionaria/toyota/rav4/rav4_gris-oscuro_marzo_2019_v03.png"
+                        <img src="../assets/img/concesionaria/toyota/4RunnerLimited/4runner-dark-blue.jpg"
                             alt="Plan naturaleza" width="260" height="150">
                     </div>
                     <div class="plan">
-                        <img src="../assets/img/concesionaria/toyota/rav4/rav4_gris-plata_marzo_2019_v03.png"
+                        <img src="../assets/img/concesionaria/toyota/4RunnerLimited/4runner-gray.jpg"
                             alt="Plan naturaleza" width="260" height="150">
                     </div>
                     <div class="plan">
-                        <img src="../assets/img/concesionaria/toyota/rav4/rav4_luna-rock_marzo_2019.jpg"
+                        <img src="../assets/img/concesionaria/toyota/4RunnerLimited/4runner-perla.jpg"
                             alt="Plan naturaleza" width="260" height="150">
                     </div>
                     <div class="plan">
-                        <img src="../assets/img/concesionaria/toyota/rav4/rav4_negro_marzo_2019_v03.png"
+                        <img src="../assets/img/concesionaria/toyota/4RunnerLimited/4runner-red.jpg"
                             alt="Plan naturaleza" width="260" height="150">
                     </div>
                     <div class="plan">
-                        <img src="../assets/img/concesionaria/toyota/rav4/rav4_rojo_marzo_v02.png" alt="Plan naturaleza"
-                            width="260" height="150">
-                    </div>
-                    <div class="plan">
-                        <img src="../assets/img/concesionaria/toyota/rav4/rav4_super-white_marzo_2019.png"
+                        <img src="../assets/img/concesionaria/toyota/4RunnerLimited/4runner-silver.jpg"
                             alt="Plan naturaleza" width="260" height="150">
                     </div>
                 </section>
@@ -79,49 +75,47 @@
             <section id="version">
                 <h2>Especificaciones</h2>
                 <hr>
-                <h3>RAV4 4X2 AUT</h3>
-                <br>• Transmisión CVT
-                <br>• Control de Estabilidad del Vehículo (VSC)
-                <br>• Inyección Electrónica de combustible y (VVT-i Dual)
-                <br>• Sistema de frenos Antibloqueo (ABS) con BA y EBD
+                <h3>4RUNNER - AUTOMÁTICO</h3>
+                <br>• Asistente para ascenso (HAC) y descenso (DAC)
+                <br>• Piñón de montaña
+                <br>• Capacidad de 23 galones
+                <br>• Control de tracción Automática (A-TRC)
             </section>
             <section id="caracteristicas">
                 <h2>Diseño</h2>
-                <h4>Más deportivo y robusto que nunca</h4>
+                <h4>Auténtico y libre</h4>
                 <h3>Exterior</h3>
-                <p>RAV4 redefine su parrilla frontal con un diseño más deportivo, agresivo y audaz que le dotan de mayor
-                    ventilación a su potente motor. Con una apariencia de mayor tamaño, la nueva RAV4 demuestra la
-                    grandeza con la que se ha sido hecha esta SUV off-road desde hace décadas.</p>
-                <p>Los faros delanteros de la nueva RAV4 ahora tienen un mayor alcance y amplitud para el camino. Cada
-                    línea de diseño está pensada para brindarle mayor aerodinámica, deportividad y ventilación para las
-                    partes importantes del motor.</p>
+                <p>Los rieles en el techo y su robusto chasis le permiten a 4Runner transportar tu equipo de
+                    exploración, tabla de surf, bicicletas o lo que necesites para tu viaje de aventura.</p>
+                <p>Los detalles de cada parte de Fortuner le añaden elegancia y distinción. Una combinación perfecta
+                    para quienes se quieren distinguir del resto.</p>
                 <h3>Interior</h3>
-                <p>Un espíritu inconfundible. RAV4 ofrece un nuevo nivel de refinamiento interior que te dejará
-                    impresionado a ti y a tus pasajeros.
-                    Desde sus herramientas de entretenimiento hasta cada detalle en asientos y puertas, RAV4 está
-                    colmada de tecnología pensada para mantenerte cómodo en cualquier lugar.</p>
+                <p>Todos pueden viajar en Fortuner. Su segunda fila de asientos delantera es deslizable, lo que permite
+                    entrar con facilidad a los asientos de tercera fila sin problemas.</p>
                 <h3>Desempeño</h3>
-                <p>Un motor de gasolina DOHC VVT-i Dual de 2.0 litros, te brindarán el máximo rendimiento por más
-                    kilómetros con la mejor optimización de combustible. Además, sus funciones tecnológicas te
-                    garantizarán la comodidad y la seguridad que tú deseas.</p>
+                <h5></h5>
+                <p>Con 4Runner experimentarás el límite de la aventura off-road. Equipado con motor con 6 cilindros en
+                    forma de V y cilindraje de 4000 cc superará tus expectativas.</p>
             </section>
             <section id="especificaciones">
                 <h2>Especificaciones</h2>
                 <h3>Capacidad</h3>
-                <h5>5 personas</h5>
+                <h5>7 personas</h5>
                 <h3>Tanque de Combustible</h3>
-                <h5>Capacidada de 14.52 Galones</h5>
+                <h5>Capacidada de 23 Galones</h5>
                 <h3>Motor</h3>
-                <h5>Cilindros 4 cilindros 
-                    <br> Caballos de fuerza  170HP
+                <h5>Cilindros 6 cilindros
+                    <br> Caballos de fuerza 271
                 </h5>
                 <h3>Sistema de Frenos</h3>
-                <h5>Frontal 	    Antibloqueo (ABS) con BA y EBD <br> Trazero  	Antibloqueo (ABS) con BA y EBD</h5>
+                <h5>Delantero Disco ventilado
+                    <br>Trasero Disco ventilado
+                    <br>Control de Frenos Frenos ABS
+                </h5>
                 <h3>Exterior</h3>
-                <h5>llantas Llantas radiales 225/65R17</h5>
+                <h5>llantas 245/70R17</h5>
                 <h3>Interior</h3>
-                <h5>Aire acondicionado Disponible con calefacción</h5>
-
+                <h5>Aire acondicionado Automático con calefacción delantera</h5>
             </section>
     </div>
     <footer>
