--- a/CR221376_GUIA4/Analisis de Resultado/concesionaria.html
+++ b/CR221376_GUIA4/Analisis de Resultado/concesionaria.html
@@ -26,7 +26,7 @@
         <section id="marcas">
             <a href="toyota.html" id="inicio"><img id="marca" src="../assets/img/concesionaria/concesionaria/toyota.png"
                     alt="Marca 1"></a>
-            <a href="hino.html" id="inicio"> <img id="marca" src="../assets/img/concesionaria/concesionaria/hino.png"
+            <a href="toyota.html" id="inicio"> <img id="marca" src="../assets/img/concesionaria/concesionaria/hino.png"
                     alt="Marca 2"></a>
             <a href="chevrolet.html" id="inicio"><img id="marca"
                     src="../assets/img/concesionaria/concesionaria/chevrolet.png" alt="Marca 3"></a>
