--- a/CR221376_GUIA4/Analisis de Resultado/chevrolet.html
+++ b/CR221376_GUIA4/Analisis de Resultado/chevrolet.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/styleChevrolet.css">
-    <title>Automoviles Toyota  |Concesionaria de Automóviles | Blue Eagle Company</title>
+    <title>Chevrolet El Salvador | Sitio Oficial  |Concesionaria de Automóviles | Blue Eagle Company</title>
 </head>
+
 <body>
     <header id="chevrolet">
     </header>
     <nav>
         <a href="concesionaria.html">Inicio</a>
         <a href="toyota.html">Toyota</a>
-        <a href="hino.html">Hino</a>
+        <a href="toyota.html">Hino</a>
         <a href="chevrolet.html">chevrolet</a>
         <a href="mitsubishi.html">mitsubishi</a>
         <a href="fuso.html">Fuso</a>
@@ -21,19 +23,24 @@
     </nav>
     <main>
         <section class="vehiculo">
-            <img src="../assets/img/concesionaria/" alt="Automóvil 1">
-            <h2></h2>
-            <a href="">Ver mas detalles</a>
+            <img src="../assets/img/concesionaria/chevrolet/onix_chevrolet_el_salvador.jpg" alt="Automóvil 1">
+            <h2>Onix</h2>
+            <a href="onix.html">Ver mas detalles</a>
         </section>
         <section class="vehiculo">
-            <img src="../assets/img/concesionaria" alt="Automóvil 2">
-            <h2></h2>
-            <a href="">Ver mas detalles</a>
+            <img src="../assets/img/concesionaria/chevrolet/Thumbnail-Camaro-2020.png" alt="Automóvil 2">
+            <h2>Camaro SS</h2>
+            <a href="camaro_ss.html">Ver mas detalles</a>
         </section>
         <section class="vehiculo">
-            <img src="../assets/img/concesionaria/" alt="Automóvil 3">
-            <h2></h2>
-            <a href="">Ver mas detalles</a>
+            <img src="../assets/img/concesionaria/chevrolet/236x132.jpg" alt="Automóvil 3">
+            <h2>Corvette</h2>
+            <a href="corvette.html">Ver mas detalles</a>
+        </section>
+        <section class="vehiculo">
+            <img src="../assets/img/concesionaria/chevrolet/suburban_mug.jpg" alt="Automóvil 3">
+            <h2>Suburban</h2>
+            <a href="suburban.html">Ver mas detalles</a>
         </section>
         <!-- Agregar más vehículos según sea necesario -->
     </main>
@@ -42,4 +49,5 @@
         <img src="../assets/img/mark 11 lic.png" alt="" width="120px">
     </footer>
 </body>
+
 </html>
