--- a/CR221376_GUIA4/Analisis de Resultado/concesionaria.html
+++ b/CR221376_GUIA4/Analisis de Resultado/concesionaria.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="concesionaria.html">Inicio</a>
         <a href="toyota.html">Toyota</a>
-        <a href="hino.html">Hino</a>
+        <a href="toyota.html">Hino</a>
         <a href="chevrolet.html">chevrolet</a>
         <a href="mitsubishi.html">mitsubishi</a>
         <a href="fuso.html">Fuso</a>
