--- a/CR221376_GUIA4/Analisis de Resultado/rush.html
+++ b/CR221376_GUIA4/Analisis de Resultado/rush.html
@@ -14,14 +14,14 @@
     </header>
     <section>
         <nav id="concesionaria">
-            <a id="concesionaria" href="concesionaria.html">Inicio</a>
-            <a id="concesionaria" href="toyota.html">Toyota</a>
-            <a id="concesionaria" href="hino.html">Hino</a>
-            <a id="concesionaria" href="chevrolet.html">chevrolet</a>
-            <a id="concesionaria" href="mitsubishi.html">mitsubishi</a>
-            <a id="concesionaria" href="fuso.html">Fuso</a>
-            <a id="concesionaria" href="kia.html">Kia</a>
-            <a id="concesionaria" href="BMW.html">BMW</a>
+            <a href="concesionaria.html">Inicio</a>
+            <a href="toyota.html">Toyota</a>
+            <a href="toyota.html">Hino</a>
+            <a href="chevrolet.html">chevrolet</a>
+            <a href="mitsubishi.html">mitsubishi</a>
+            <a href="fuso.html">Fuso</a>
+            <a href="kia.html">Kia</a>
+            <a href="BMW.html">BMW</a>
         </nav>
     </section>
     <nav>
